--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,13 @@
     "cra-template-typescript": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zod": "^4.0.13",
+    "zustand": "^5.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
