--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,13 +1,17 @@
 {
     "compilerOptions": {
-      "target": "es5",
+      "target": "esnext",
       "module": "commonjs",
       "jsx": "react",
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true
+      "forceConsistentCasingInFileNames": true,
+      "baseUrl": ".",
+      "paths": {
+        "@/*": ["./src/*"]
+      }
     },
-    "include": ["src"]
+    //"include": ["src"]
   }
   
