--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:3001
-REACT_APP_SOCKET_URL=http://localhost:3001/chat
+VITE_APP_API_URL=http://localhost:3001
+VITE_APP_SOCKET_URL=http://localhost:3001/chat
